exports[`test should render a default table 1`] = `
<table
  className="terra-Table terra-Table--striped">
  <TableHeader>
    <TableHeaderCell
      content="Name"
      minWidth="small" />
    <TableHeaderCell
      content="Address"
      minWidth="small" />
    <TableHeaderCell
      content="Phone Number"
      minWidth="small" />
  </TableHeader>
  <TableRows>
    <TableRow
      isSelected={false}>
      <TableCell
        content="John Smith" />
      <TableCell
        content="123 Adams Drive" />
      <TableCell
        content="111-222-3333" />
    </TableRow>
    <TableRow
      isSelected={false}>
      <TableCell
        content="John Smith" />
      <TableCell
        content="123 Adams Drive" />
      <TableCell
        content="111-222-3333" />
    </TableRow>
  </TableRows>
</table>
`;

exports[`test should render a table without zebra stripes 1`] = `
<table
  className="terra-Table">
  <TableHeader>
    <TableHeaderCell
      content="Name"
      minWidth="small" />
    <TableHeaderCell
      content="Address"
      minWidth="small" />
    <TableHeaderCell
      content="Phone Number"
      minWidth="small" />
  </TableHeader>
  <TableRows>
    <TableRow
      isSelected={false}>
      <TableCell
        content="John Smith" />
      <TableCell
        content="123 Adams Drive" />
      <TableCell
        content="111-222-3333" />
    </TableRow>
    <TableRow
      isSelected={false}>
      <TableCell
        content="John Smith" />
      <TableCell
        content="123 Adams Drive" />
      <TableCell
        content="111-222-3333" />
    </TableRow>
  </TableRows>
</table>
`;
